All Files Uploaded Successfully

--- a/03_text_format.html
+++ b/03_text_format.html
@@ -24,7 +24,7 @@
     <p>This is <strong>important</strong>  and <em>emphasized</em> text.</p>
 
     <!--? Underline and Strikethrough:
-    <u>: Represents underlined text.
+    <u>: Represents underlined text.1
     <s>: Represents strikethrough text (crossed out). -->
     <hr />
     <p>This is <u>underlined</u> and <s>strikethrough</s> text.</p>
@@ -39,8 +39,10 @@
 
     <!--? Preformatted Text:
     <pre>: Represents preformatted text, preserving spaces and line breaks. 
+      
     <kbd> Tag: The <kbd> tag represents keyboard input, indicating that the enclosed content should be treated 
     as something a user would type on a keyboard. It is often used to show examples of keyboard commands or shortcuts.
+    
     <abbr> Tag: The <abbr> tag stands for "abbreviation" and is used to mark up abbreviations or acronyms in your content.  
     -->
     <hr />
