--- a/04_anchor.html
+++ b/04_anchor.html
@@ -14,11 +14,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML anchor tag</title>
     <style>
-      html{
+      html {
         scroll-behavior: smooth;
       }
     </style>
-
   </head>
   <body>
     <h1>The Best Html Course</h1>
@@ -42,7 +41,11 @@
     </p>
     <br />
     <a href="#our_services">go to our Services</a>
-    <a href="./Discipline-Is-Destiny-The-Power-of-Self-Control-The-Stoic-Virtues-Series-Ryan-Holiday-booktree.ng_.pdf" download>Click to Download Discipline is Destiny</a>
+    <a
+      href="./Discipline-Is-Destiny-The-Power-of-Self-Control-The-Stoic-Virtues-Series-Ryan-Holiday-booktree.ng_.pdf"
+      download
+      >Click to Download Discipline is Destiny</a
+    >
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, itaque
       perferendis. Quo, maiores, beatae accusamus rem voluptates odio
@@ -160,8 +163,11 @@ same webpage, you can use the anchor (a) tag's href attribute along with the id 
 
 <!--* 4: How do you create an HTML link that opens the user's default email client with a specific email address? -->
 <a href="mailto:  ghub4569@gmail.com">Send mail to Kuldeep</a>
+
 <!--* 5: How can you create a clickable link in HTML that allows users to directly initiate a phone call when clicked? -->
 <!-- To create a link that enables users to initiate a phone call when clicked, you can use the anchor tag's href attribute with the tel: protocol.  -->
+
+<!-- <a href="tel: 8104332323">Phone</a> -->
 
 <p>A link to my &lt; kuldeep verma &gt;website</p>
 
