--- a/10_lists.html
+++ b/10_lists.html
@@ -1,12 +1,12 @@
 <!-- *------------------------------------- -->
 <!--*  HTML LIST - ORDER VS UNORDERED TAG  
 <!-- *---------------------------------------- -->
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Document</title> 
   </head>
   <body>
    <ul>
@@ -27,10 +27,17 @@
    </ul> 
   </body>
 </html>
-<!-- 
+<!--  -->
 
 ?Unordered List (<ul>) Example:  An unordered list is used to create a list of items that are not in any particular order. Each list item is marked with a bullet point.
 
+<!-- <ul type="square">
+  <li>First</li>
+  <li>Second</li>
+  <li>Third</li>
+  <li>Fourth</li>
+  <li>Five</li>
+</ul> -->
   
 Unordered List (<ul>) Styles:
 
@@ -39,11 +46,17 @@ Unordered List (<ul>) Styles:
   Square (list-style-type: square;): Squares.
   None (list-style-type: none;): No bullet points.
 
-      
     
 Ordered List (<ol>) Example:
    An ordered list is used to create a list of items in a specific order, typically indicated by numbers.
 
+<ol type="1" start="50">
+  <li>First</li>
+  <li>Second</li>
+  <li>Third</li>
+  <li>Fourth</li>
+  <li>Five</li>
+</ol>
 
 Ordered List (<ol>) Styles:
 
@@ -67,7 +80,29 @@ Uppercase Roman Numerals (type="I"): It uses uppercase Roman numerals (I, II, II
 Lowercase Roman Numerals (type="i"): It uses lowercase Roman numerals (i, ii, iii) as list item numbers. -->
 
 <!--? 2: What is the use of the start attribute in ordered lists? -->
+The start attribute specifies the start value of the first list item in an ordered list.
+
+This value is always an integer, even when the numbering type is letters or romans. E.g., to start counting list items from the letter "c" or the roman number "iii", use start="3".
 
 <!--? 3: Explain the concept of nested lists  -->
+Nested List - is the concept inwhich a list is store inside a list already. 
+<ul type="circle">
+  <li>Outer List
+    <ul type="circle">
+      <li>Inner List
+        <ul type="circle">
+          <li>Inner inside one more list</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
+</ul>
 
 <!--? 4: How do you create a horizontal navigation menu using an unordered list? -->
+
+<ul>
+  <li style="display: inline-block;">Home</li>
+  <li style="display: inline-block;">About Us</li>
+  <li style="display: inline-block;">Contact Us</li>
+  <li style="display: inline-block;">Create account</li>
+</ul>
